Revision history for exact::class

{{$NEXT}}

1.09      2020-07-30 09:35:28-07:00 America/Los_Angeles
        - Inject Class::Method::Modifiers when using class

1.08      2020-04-23 07:44:57-07:00 America/Los_Angeles
        - Allow code ref refs as a means of using callback attributes repeately

1.07      2019-11-06 11:50:09-08:00 America/Los_Angeles
        - Sub attrs in objs lazily-run to set value on first access

1.06      2019-11-05 11:17:22-08:00 America/Los_Angeles
        - Fix for new() inputs not overriding class-set attributes in all contexts

1.05      2019-10-18 14:09:01-07:00 America/Los_Angeles
        - Major refactor to more closely match Mojo::Base internal practices
        - Switch to mostly inheritance by default instead of injection of key methods
        - Depends on exact v1.10 for inheritance
        - Inheritance conducted by placing self at end of diamond inheritance list

1.04      2019-08-26 15:09:25-07:00 America/Los_Angeles
        - Reverting signatures from a test because older Perls can't do that

1.03      2019-08-26 14:38:07-07:00 America/Los_Angeles
        - Improved inheritance support of has variables
        - Changed to use "-" prepending flags for compile check w00t
        - Add back dist.ini components

1.02      2019-08-13 14:59:29-07:00 America/Los_Angeles
        - Switch from TryCatch to Try::Tiny as provided by exact

1.01      2019-08-08 06:45:34-07:00 America/Los_Angeles
        - First version, released on an unsuspecting world.